----------------------------------------------------------------------
 OmegaT 2.5.1 update 2
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
2.5.1 update 2 vs. 2.5.1 update 1

  Bug fixes:

  - In the PO filter, "path" was always displayed in the Comment pane, 
even if it was empty

  Localisation updates:

  - Simplified Chinese localisation updated to 2.5.0 (UI, readme, documentation)

----------------------------------------------------------------------
 OmegaT 2.5.1 update 1
----------------------------------------------------------------------
   2 Enhancements
   2 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.5.1 update 1 vs. 2.5.1 

  Implemented requests:

  - Console: more context on error message "Failed to load..."
  http://sourceforge.net/support/tracker.php?aid=3465220

  - Navigate to next/previous segment with a note
  http://sourceforge.net/support/tracker.php?aid=3484729

  Bug fixes:

  - Remove Tags can create a corrupted target document
  http://sourceforge.net/support/tracker.php?aid=3487497

  - After "save" the cursor goes to the head of the segment
  http://sourceforge.net/support/tracker.php?aid=1643198

----------------------------------------------------------------------
 OmegaT 2.5.1
----------------------------------------------------------------------
  10 Enhancements
   1 Bug fix
   2 Localisation updates
----------------------------------------------------------------------
2.5.1 vs. 2.5.0 update 5

  Implemented requests:

  - Validate tags in console mode
  http://sourceforge.net/support/tracker.php?aid=3426212

  - Add patterns for text that should be removed and validate
  http://sourceforge.net/support/tracker.php?aid=3477099

  - User-defined tags
  http://sourceforge.net/support/tracker.php?aid=1599334
