@@ -47,12 +47,12 @@
     <para><emphasis role="bold">Copyright</emphasis></para>
 
     <para><emphasis role="bold"><application>OmegaT</application>
-    2.5</emphasis> is Copyright © 2000-2011 Keith Godfrey, Maxym Mykhalchuk,
+    2.5</emphasis> is Copyright © 2000-2012 Keith Godfrey, Maxym Mykhalchuk,
     Zoltan Bartko, Didier Briel, Kim Bruning, Alex Buloichik, Sandra Jean
-    Chua, Martin Fleurke, Thomas Huriaux, Ibai Lakunza Velasco, Guido Leenders, 
-    Fabián Mandelbaum, John Moran, Arno Peters, Henry Pijffers, Briac Pilpré, 
-    Tiago Saboga, Andrzej Sawuła, Benjamin Siband, Rashid Umarov, Antonio Vilei, 
-    Martin Wunderlich and Michael Zakharov.</para>
+    Chua, Martin Fleurke, Thomas Huriaux, Hans-Peter Jacobs, Ibai Lakunza Velasco, 
+    Guido Leenders, Fabián Mandelbaum, John Moran, Arno Peters, Henry Pijffers, 
+    Briac Pilpré, Tiago Saboga, Andrzej Sawuła, Benjamin Siband, Rashid Umarov, 
+    Antonio Vilei, Martin Wunderlich and Michael Zakharov.</para>
 
     <para><emphasis role="bold">Distribution and
     modifications</emphasis></para>
