@@ -232,6 +232,7 @@ Code has been contributed by
   Martin Fleurke  
   Wildrich Fourie
   Thomas Huriaux
+  Hans-Peter Jacobs
   Guido Leenders
   Ibai Lakunza Velasco
   Fabián Mandelbaum
