@@ -978,7 +978,7 @@ ABOUTDIALOG_TITLE=\u00c0 propos de OmegaT
 ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2012 Keith Godfrey, Maxym Mykhalchuk et d'autres personnes
 
 ABOUTDIALOG_LICENSE_BUTTON=&Licence
-ABOUTDIALOG_CONTRIBUTORS=OmegaT est un outil de Traduction Assist\u00e9e par Ordinateur libre, \u00e0 code source ouvert et multiplateforme, avec recherche de correspondances, m\u00e9moire de traduction, recherche par mots clefs, glossaires et r\u00e9utilisation des traductions dans des projets modifi\u00e9s.\n\nOmegaT est l'\u0153uvre de Keith Godfrey.\nLe coordinateur du projet OmegaT est Marc Prior.\n\nContributions au code :\nZoltan Bartko, Volker Berlin, Didier Briel (responsable du d\u00e9veloppement), Kim Bruning, Alex Buloichik (d\u00e9veloppeur principal), Sandra Jean Chua, Martin Fleurke, Wildrich Fourie, Thomas Huriaux, Ibai Lakunza Velasco, Guido Leenders, Fabi\u00e1n Mandelbaum, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Rashid Umarov, Antonio Vilei, Martin Wunderlich et Michael Zakharov\n\nLes autres contributions sont d\u00e9taill\u00e9es dans le fichier readme_fr.txt.\n\nOmegaT utilise les biblioth\u00e8ques suivantes :\n  HTMLParser par Somik Raha, Derrick Oswald, etc. (Licence LGPL)\n  MRJ Adapter par Steve Roy (licence LGPL)\n  VLDocking Framework 2.1.4 par VLSolutions (licence CeCILL)\n  Hunspell par L\u00e1szl\u00f3 N\u00e9meth et d'autres personnes (Licence LGPL)\n  JNA par Todd Fast, Timothy Wall et d'autres personnes (Licence LGPL)\n  Swing-Layout 1.0.2 (licence LGPL)\n  Jmyspell 2.1.4 (licence LGPL) \n  JAXB (GPLv2 + classpath exception)
+ABOUTDIALOG_CONTRIBUTORS=OmegaT est un outil de Traduction Assist\u00e9e par Ordinateur libre, \u00e0 code source ouvert et multiplateforme, avec recherche de correspondances, m\u00e9moire de traduction, recherche par mots clefs, glossaires et r\u00e9utilisation des traductions dans des projets modifi\u00e9s.\n\nOmegaT est l'\u0153uvre de Keith Godfrey.\nLe coordinateur du projet OmegaT est Marc Prior.\n\nContributions au code :\nZoltan Bartko, Volker Berlin, Didier Briel (responsable du d\u00e9veloppement), Kim Bruning, Alex Buloichik (d\u00e9veloppeur principal), Sandra Jean Chua, Martin Fleurke, Wildrich Fourie, Thomas Huriaux, Hans-Peter Jacobs, Ibai Lakunza Velasco, Guido Leenders, Fabi\u00e1n Mandelbaum, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Rashid Umarov, Antonio Vilei, Martin Wunderlich and Michael Zakharov\n\nLes autres contributions sont d\u00e9taill\u00e9es dans le fichier readme_fr.txt.\n\nOmegaT utilise les biblioth\u00e8ques suivantes :\n  HTMLParser par Somik Raha, Derrick Oswald, etc. (Licence LGPL)\n  MRJ Adapter par Steve Roy (licence LGPL)\n  VLDocking Framework 2.1.4 par VLSolutions (licence CeCILL)\n  Hunspell par L\u00e1szl\u00f3 N\u00e9meth et d'autres personnes (Licence LGPL)\n  JNA par Todd Fast, Timothy Wall et d'autres personnes (Licence LGPL)\n  Swing-Layout 1.0.2 (licence LGPL)\n  Jmyspell 2.1.4 (licence LGPL) \n  JAXB (GPLv2 + classpath exception)
 
 # LicenseDialog.java
 
@@ -1372,6 +1372,8 @@ MW_VIEW_MENU=&Affichage
 MW_VIEW_MENU_DISPLAY_SEGMENT_SOURCES=Afficher les segments &source
 
 MW_VIEW_MENU_MARK_NON_UNIQUE_SEGMENTS=Marquer les segments non &uniques
+
+MW_VIEW_MENU_MARK_NOTED_SEGMENTS=Marquer les segments &annot\u00e9s
 
 MW_VIEW_MENU_MODIFICATION_INFO=Informations de &modification
 
